small change: add Dependencies sections.

--- a/changelog-template.hbs
+++ b/changelog-template.hbs
@@ -37,7 +37,11 @@ href}}[`#{{id}}`]({{href}}){{/if}}{{/each}}
 {{/each}}
 {{/if}}
 
-{{#commit-list commits heading='### Commits' exclude='(Release v)|(small fix: )|(small change: )'}}
+{{#commit-list commits heading='### Commits' exclude='(Release v)|(small fix: )|(small change: )|(Bump )'}}
+- {{#if breaking}}**Breaking change:** {{/if}}{{subject}} {{#if href}}[`{{shorthash}}`]({{href}}){{/if}}
+{{/commit-list}}
+
+{{#commit-list commits heading='### Dependencies' message='(Bump )'}}
 - {{#if breaking}}**Breaking change:** {{/if}}{{subject}} {{#if href}}[`{{shorthash}}`]({{href}}){{/if}}
 {{/commit-list}}
 
